--- a/notes.html
+++ b/notes.html
@@ -73,7 +73,6 @@
               <hr class="first" />
               <section>
                 <p>Find the notes from:</p>
-                <br />
                 <h4>
                   <a href="#imperial" class="scrolly"
                     >Imperial College London (2023-2024)</a
@@ -82,11 +81,10 @@
                 <p></p>
                 <h4>
                   <a href="#hust" class="scrolly"
-                    >Huazhong University of Science and Technology
-                    (2018-2022)</a
+                    >Huazhong University of Science and Technology</a
                   >
                 </h4>
-                <p></p>
+                <p>(2018-2022)<br /></p>
                 <h4>
                   <a href="#pku" class="scrolly"
                     >Peking University (Summer 2020)</a
