--- a/notes.html
+++ b/notes.html
@@ -75,16 +75,15 @@
                 <p>Find the notes from:</p>
                 <h4>
                   <a href="#imperial" class="scrolly"
-                    >Imperial College London (2023-2024)</a
-                  >
+                    >Imperial College London (2023 - 2024)</a
+                  ><br />
                 </h4>
-                <p></p>
                 <h4>
                   <a href="#hust" class="scrolly"
-                    >Huazhong University of Science and Technology</a
-                  >
+                    >Huazhong University of Science and Technology (2018 -
+                    2022)</a
+                  ><br />
                 </h4>
-                <p>(2018-2022)<br /></p>
                 <h4>
                   <a href="#pku" class="scrolly"
                     >Peking University (Summer 2020)</a
