--- a/notes.html
+++ b/notes.html
@@ -107,6 +107,11 @@
                   <header>
                     <h3>Imperial College London (2023-2024)</h3>
                   </header>
+                  <p>
+                    This collection contains my notes for various
+                    physics-related courses I've taken in Imperial College
+                    London.
+                  </p>
                   <ul>
                     <li>
                       Quantum Information [<a
@@ -164,8 +169,7 @@
                     This collection includes notes from my undergraduate
                     studies, primarily written in Chinese. They cover a mix of
                     topics, ranging from class lectures to self-directed
-                    learning. For clarity, I've added labels to indicate the
-                    source of each note.
+                    learning.
                   </p>
                   <ul>
                     <li>
