--- a/compilation-for-neutral-atom-quantum-computers.html
+++ b/compilation-for-neutral-atom-quantum-computers.html
@@ -159,6 +159,27 @@
                 <h4>Placement</h4>
                 <h4>Routing</h4>
               </section>
+              <hr />
+              <section>
+                <header>
+                  <h3>Links</h3>
+                  <ul>
+                    <li>
+                      <a href="http://en.baqis.ac.cn/research/groups/?cid=814"
+                        >Quantum Operating System Group, Beijing Academy of
+                        Quantum Information Sciences (BAQIS)</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        href="https://info.phys.tsinghua.edu.cn/coldquantum/index.html"
+                        >Ultracold Atoms & Quantum Optics Research Group,
+                        Tsinghua University</a
+                      >
+                    </li>
+                  </ul>
+                </header>
+              </section>
             </div>
           </div>
         </div>
