--- a/notes.html
+++ b/notes.html
@@ -280,6 +280,11 @@
                   <header>
                     <h3>Peking University (Summer 2020)</h3>
                   </header>
+                  <p>
+                    These are my lecture notes from the Quantum Mechanics (II)
+                    course taught by Prof. Zhixin Qian during the 2020
+                    Summer School at Peking University.
+                  </p>
                   <ul>
                     <li>
                       量子力学(II)
