--- a/notes.html
+++ b/notes.html
@@ -282,45 +282,45 @@
                   </header>
                   <p>
                     These are my lecture notes from the Quantum Mechanics (II)
-                    course taught by Prof. Zhixin Qian during the 2020
-                    Summer School at Peking University.
+                    course taught by Prof. Zhixin Qian during the 2020 Summer
+                    School at Peking University.
                   </p>
                   <ul>
                     <li>
-                      量子力学(II)
+                      Quantum Mechanics (II)
                       <a href="docs/notes/Ch1_Phase in QM.pdf"
                         >Chapter 1: Phase in quantum mechanics</a
                       >
                     </li>
                     <li>
-                      量子力学(II)
+                      Quantum Mechanics (II)
                       <a href="docs/notes/Ch2_Path Integral Formalism of QM.pdf"
                         >Chapter 2: Path integral formalism of quantum
                         mechanics</a
                       >
                     </li>
                     <li>
-                      量子力学(II)
+                      Quantum Mechanics (II)
                       <a href="docs/notes/Ch3_The WKB Approximation.pdf"
                         >Chapter 3: The WKB approximation</a
                       >
                     </li>
                     <li>
-                      量子力学(II)
+                      Quantum Mechanics (II)
                       <a
                         href="docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
                         >Chapter 4: Rotation and vibration of molecules</a
                       >
                     </li>
                     <li>
-                      量子力学(II)
+                      Quantum Mechanics (II)
                       <a
                         href="docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
                         >Chapter 5: Variation principle</a
                       >
                     </li>
                     <li>
-                      量子力学(II)
+                      Quantum Mechanics (II)
                       <a
                         href="docs/notes/Ch6_Introduction to Many-body Theory.pdf"
                         >Chapter 6: Introduction to many-body theory</a
