--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -139,7 +139,7 @@
                       <a href="https://patents.google.com/patent/CN117494829/en"
                         >CN117494829</a
                       ></i
-                    >, 2023.
+                    >, Granted 2023.
                   </li>
                   <li>
                     <strong>C. Huang</strong> and J. Wang, "Ion trap chip
