--- a/notes.html
+++ b/notes.html
@@ -109,7 +109,7 @@
                   </header>
                   <p>
                     This collection contains my notes for various
-                    physics-related courses I've taken in Imperial College
+                    physics-related courses I've taken at Imperial College
                     London.
                   </p>
                   <ul>
