--- a/notes.html
+++ b/notes.html
@@ -105,7 +105,7 @@
                 </header>
                 <section id="imperial">
                   <header>
-                    <h3>Imperial College London (2023-2024)</h3>
+                    <h3><a>Imperial College London (2023-2024)</a></h3>
                   </header>
                   <p>
                     This collection contains my notes for various
@@ -162,7 +162,10 @@
                 <section id="hust">
                   <header>
                     <h3>
-                      Huazhong University of Science and Technology (2018-2022)
+                      <a>
+                        Huazhong University of Science and Technology
+                        (2018-2022)</a
+                      >
                     </h3>
                   </header>
                   <p>
@@ -278,7 +281,7 @@
                 </section>
                 <section id="pku">
                   <header>
-                    <h3>Peking University (Summer 2020)</h3>
+                    <h3><a>Peking University (Summer 2020)</a></h3>
                   </header>
                   <p>
                     These are my lecture notes from the Quantum Mechanics (II)
