--- a/notes.html
+++ b/notes.html
@@ -105,7 +105,11 @@
                 </header>
                 <section id="imperial">
                   <header>
-                    <h3><a>Imperial College London (2023-2024)</a></h3>
+                    <h3>
+                      <a href="#imperial" class="scrolly"
+                        >Imperial College London (2023-2024)</a
+                      >
+                    </h3>
                   </header>
                   <p>
                     This collection contains my notes for various
@@ -162,7 +166,7 @@
                 <section id="hust">
                   <header>
                     <h3>
-                      <a>
+                      <a href="#hust" class="scrolly">
                         Huazhong University of Science and Technology
                         (2018-2022)</a
                       >
@@ -287,7 +291,11 @@
                 </section>
                 <section id="pku">
                   <header>
-                    <h3><a>Peking University (Summer 2020)</a></h3>
+                    <h3>
+                      <a href="#pku" class="scrolly"
+                        >Peking University (Summer 2020)</a
+                      >
+                    </h3>
                   </header>
                   <p>
                     These are my lecture notes from the Quantum Mechanics (II)
