--- a/notes.html
+++ b/notes.html
@@ -178,33 +178,38 @@
                     topics, ranging from class lectures to self-directed
                     learning.
                   </p>
-                  <h4>Mathematical Methods in Physics (Fall 2019)</h4>
+                  <section>
+                    <h4>Mathematical Methods in Physics (Fall 2019)</h4>
+                    <p>
+                      This course consists of two parts. The first part,
+                      <strong>Complex Analysis</strong>, was taught by Prof.
+                      Cheng-Gang Shao. The materials for this section were based
+                      on the course textbook, lecture slides, and exam
+                      preparation notes. The second part,
+                      <strong>Equations of Mathematical Physics</strong>, was
+                      taught by Prof. Yong Hu, with the content primarily
+                      derived from his lecture notes.
+                    </p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[复变函数]期末复习笔记.pdf"
+                          >Review of Complex Analysis</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[数学物理方程]课堂笔记.pdf"
+                          >Lecture Notes on Equations of Mathematical Physics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <h4>Theoretical Mechanics (Fall 2019)</h4>
                   <p>
-                    This course consists of two parts. The first part,
-                    <strong>Complex Analysis</strong>, was taught by Prof.
-                    Cheng-Gang Shao. The materials for this section were based
-                    on the course textbook, lecture slides, and exam preparation
-                    notes. The second part,
-                    <strong>Equations of Mathematical Physics</strong>, was
-                    taught by Prof. Yong Hu, with the content primarily derived
-                    from his lecture notes.
+                    Taught by Prof. Sheng-You Huang, contains from Lagrangian
                   </p>
                   <ul>
                     <li>
-                      <a href="docs/notes/[复变函数]期末复习笔记.pdf"
-                        >Review of Complex Analysis</a
-                      >
-                    </li>
-                    <li>
-                      <a href="docs/notes/[数学物理方程]课堂笔记.pdf"
-                        >Lecture Notes on Equations of Mathematical Physics</a
-                      >
-                    </li>
-                  </ul>
-                  <ul>
-                    <li>
-                      Theoretical Mechanics [<a
-                        href="docs/notes/note-on-classical-mechanics.pdf"
+                      [<a href="docs/notes/note-on-classical-mechanics.pdf"
                         >Note</a
                       >]
                     </li>
