--- a/notes.html
+++ b/notes.html
@@ -183,36 +183,43 @@
                     <p>
                       This course consists of two parts. The first part,
                       <strong>Complex Analysis</strong>, was taught by Prof.
-                      Cheng-Gang Shao. The materials for this section were based
-                      on the course textbook, lecture slides, and exam
-                      preparation notes. The second part,
+                      Cheng-Gang Shao. The second part,
                       <strong>Equations of Mathematical Physics</strong>, was
-                      taught by Prof. Yong Hu, with the content primarily
-                      derived from his lecture notes.
+                      taught by Prof. Yong Hu. The content and structure of my
+                      notes primarily derived from his lecture notes.
                     </p>
                     <ul>
                       <li>
                         <a href="docs/notes/[复变函数]期末复习笔记.pdf"
-                          >Review of Complex Analysis</a
+                          ><strong>Review</strong> Notes on Complex Analysis</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[数学物理方程]课堂笔记.pdf"
-                          >Lecture Notes on Equations of Mathematical Physics</a
+                          ><strong>Study</strong> Notes on Equations of
+                          Mathematical Physics</a
                         >
                       </li>
                     </ul>
                   </section>
-                  <h4>Theoretical Mechanics (Fall 2019)</h4>
-                  <p>
-                    Taught by Prof. Sheng-You Huang, contains from Lagrangian
-                  </p>
+                  <section>
+                    <h4>Theoretical Mechanics (Fall 2019)</h4>
+                    <p>
+                      Taught by Prof. Sheng-You Huang, this course covered
+                      topics ranging from Lagrangian Mechanics to Hamiltonian
+                      Mechanics, with several applications including central
+                      force motion, rigid bodies, and small oscillations.
+                      Notably, these were my first notes written in English.
+                    </p>
+                    <ul>
+                      <li>
+                        [<a href="docs/notes/note-on-classical-mechanics.pdf"
+                          >Lecture Notes on Theoretical Mechanics</a
+                        >]
+                      </li>
+                    </ul>
+                  </section>
                   <ul>
-                    <li>
-                      [<a href="docs/notes/note-on-classical-mechanics.pdf"
-                        >Note</a
-                      >]
-                    </li>
                     <li>
                       Optics [<a href="docs/notes/[光学]课堂笔记_Part1.pdf"
                         >Note 1</a
