--- a/notes.html
+++ b/notes.html
@@ -163,6 +163,7 @@
                     </li>
                   </ul>
                 </section>
+                <hr />
                 <section id="hust">
                   <header>
                     <h3>
@@ -213,30 +214,62 @@
                     </p>
                     <ul>
                       <li>
-                        [<a href="docs/notes/note-on-classical-mechanics.pdf"
+                        <a href="docs/notes/note-on-classical-mechanics.pdf"
                           >Lecture Notes on Theoretical Mechanics</a
-                        >]
+                        >
                       </li>
                     </ul>
                   </section>
+                  <section>
+                    <h4>Electromagnetics (Fall 2019)</h4>
+                    <p>
+                      This course was taught by Prof. Xue-Wen Chen, which
+                      covered include electrostatics, magnetostatics,
+                      electromagnetic waves, and Maxwell's equations.
+                    </p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[电磁学]期末复习笔记.pdf"
+                          >Review Notes on Electromagnetics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Optics (Spring 2020)</h4>
+                    <p>
+                      This term was unique due to COVID-19, as we had to attend
+                      lectures online from home. The course was taught by Prof.
+                      Lu-Shuai Cao and Prof. Ze-Huang Lu. My notes were selected
+                      as exemplary for the course and shared with classmates.
+                      Due to the large file size, the notes have been divided
+                      into four parts.
+                    </p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[光学]课堂笔记_Part1.pdf"
+                          >Lecture Notes on Optics - Part 1</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[光学]课堂笔记_Part2.pdf"
+                          >Lecture Notes on Optics - Part 2</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[光学]课堂笔记_Part3.pdf"
+                          >Lecture Notes on Optics - Part 4</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[光学]课堂笔记_Part4.pdf"
+                          >Lecture Notes on Optics - Part 4</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+
                   <ul>
-                    <li>
-                      Optics [<a href="docs/notes/[光学]课堂笔记_Part1.pdf"
-                        >Note 1</a
-                      >] [<a href="docs/notes/[光学]课堂笔记_Part2.pdf"
-                        >Note 2</a
-                      >] [<a href="docs/notes/[光学]课堂笔记_Part3.pdf"
-                        >Note 3</a
-                      >] [<a href="docs/notes/[光学]课堂笔记_Part4.pdf"
-                        >Note 4</a
-                      >]
-                    </li>
-                    <li>
-                      Electromagnetics [<a
-                        href="docs/notes/[电磁学]期末复习笔记.pdf"
-                        >Review</a
-                      >]
-                    </li>
                     <li>
                       Electrodynamics [<a
                         href="docs/notes/[电动力学]期末偷分宝典.pdf"
