--- a/notes.html
+++ b/notes.html
@@ -268,6 +268,42 @@
                       </li>
                     </ul>
                   </section>
+                  <section>
+                    <h4>Analogue Electronics (Spring 2020)</h4>
+                    <p>
+                      This course was taught by Prof. Tian-Ping Deng. My notes
+                      based on his lecture online,
+                      <a href="https://www.icourse163.org/course/hust-481015"
+                        >MOOC</a
+                      >
+                      and the textbook. Due to the large file size, the notes
+                      have been divided into four parts.
+                    </p>
+                    <li>
+                      <a href="docs/notes/[模拟电子技术]笔记_Part1.pdf"
+                        ><strong>Study</strong> Notes on Analogue Electronics -
+                        Part 1</a
+                      >
+                    </li>
+                    <li>
+                      <a href="docs/notes/[模拟电子技术]笔记_Part2.pdf"
+                        ><strong>Study</strong> Notes on Analogue Electronics -
+                        Part 2</a
+                      >
+                    </li>
+                    <li>
+                      <a href="docs/notes/[模拟电子技术]笔记_Part3.pdf"
+                        ><strong>Study</strong> Notes on Analogue Electronics -
+                        Part 3</a
+                      >
+                    </li>
+                    <li>
+                      <a href="docs/notes/[模拟电子技术]笔记_Part4.pdf"
+                        ><strong>Study</strong> Notes on Analogue Electronics -
+                        Part 4</a
+                      >
+                    </li>
+                  </section>
 
                   <ul>
                     <li>
@@ -315,20 +351,7 @@
                         >Review</a
                       >]
                     </li>
-                    <li>
-                      Analogue Electronics [<a
-                        href="docs/notes/[模拟电子技术]笔记_Part1.pdf"
-                        >Note 1</a
-                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part2.pdf"
-                        >Note 2</a
-                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part3.pdf"
-                        >Note 3</a
-                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part4.pdf"
-                        >Note 4</a
-                      >] [<a href="docs/notes/[模拟电子技术]笔记_Part5.pdf"
-                        >Note 5</a
-                      >]
-                    </li>
+
                     <li>
                       Digital Electronics [<a
                         href="docs/notes/[数字电子技术]笔记_Part1.pdf"
