--- a/notes.html
+++ b/notes.html
@@ -215,7 +215,8 @@
                     <ul>
                       <li>
                         <a href="docs/notes/note-on-classical-mechanics.pdf"
-                          >Lecture Notes on Theoretical Mechanics</a
+                          ><strong>Study</strong> Notes on Theoretical
+                          Mechanics</a
                         >
                       </li>
                     </ul>
@@ -230,7 +231,7 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[电磁学]期末复习笔记.pdf"
-                          >Review Notes on Electromagnetics</a
+                          ><strong>Review</strong> Notes on Electromagnetics</a
                         >
                       </li>
                     </ul>
@@ -248,22 +249,22 @@
                     <ul>
                       <li>
                         <a href="docs/notes/[光学]课堂笔记_Part1.pdf"
-                          >Lecture Notes on Optics - Part 1</a
+                          ><strong>Study</strong> Notes on Optics - Part 1</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[光学]课堂笔记_Part2.pdf"
-                          >Lecture Notes on Optics - Part 2</a
+                          ><strong>Study</strong> Notes on Optics - Part 2</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[光学]课堂笔记_Part3.pdf"
-                          >Lecture Notes on Optics - Part 4</a
+                          ><strong>Study</strong> Notes on Optics - Part 4</a
                         >
                       </li>
                       <li>
                         <a href="docs/notes/[光学]课堂笔记_Part4.pdf"
-                          >Lecture Notes on Optics - Part 4</a
+                          ><strong>Study</strong> Notes on Optics - Part 4</a
                         >
                       </li>
                     </ul>
