--- a/notes.html
+++ b/notes.html
@@ -305,6 +305,33 @@
                       >
                     </li>
                   </section>
+                  <section>
+                    <h4>Quantum Mechanics</h4>
+                    <p>
+                      This course was taught by Prof. Ying Wu and Prof. Jia-Hua
+                      Li. However, it overlapped with another advanced course I
+                      had selected, so I decided to learn independently. My
+                      studies were based on Griffiths'
+                      <i>Introduction to Quantum Mechanics</i> and the online
+                      course from
+                      <a
+                        href="https://ocw.mit.edu/courses/8-04-quantum-physics-i-spring-2016/"
+                        >MIT OCW</a
+                      >.
+                    </p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[量子力学]学习笔记.pdf"
+                          >Study Notes on Quantum Mechanics</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[量子力学]期末偷分宝典.pdf"
+                          >Review Notes on Quantum Mechanics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
 
                   <ul>
                     <li>
@@ -313,14 +340,7 @@
                         >Review</a
                       >]
                     </li>
-                    <li>
-                      Quantum Mechanics [<a
-                        href="docs/notes/[量子力学]学习笔记.pdf"
-                        >Note</a
-                      >] [<a href="docs/notes/[量子力学]期末偷分宝典.pdf"
-                        >Review</a
-                      >]
-                    </li>
+
                     <li>
                       Advanced Quantum Mechanics [<a
                         href="docs/notes/[高等量子力学]课堂笔记.pdf"
