--- a/notes.html
+++ b/notes.html
@@ -306,7 +306,7 @@
                     </li>
                   </section>
                   <section>
-                    <h4>Quantum Mechanics</h4>
+                    <h4>Quantum Mechanics (Fall 2020)</h4>
                     <p>
                       This course was taught by Prof. Ying Wu and Prof. Jia-Hua
                       Li. However, it overlapped with another advanced course I
@@ -332,63 +332,85 @@
                       </li>
                     </ul>
                   </section>
-
+                  <section>
+                    <h4>Electrodynamics (Fall 2020)</h4>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[电动力学]期末偷分宝典.pdf"
+                          >Review Notes on Electrodynamics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Digital Electronics (Fall 2020)</h4>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[数字电子技术]笔记_Part1.pdf"
+                          >Study Notes on Digital Electronics - Part 1</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[数字电子技术]笔记_Part2.pdf"
+                          >Study Notes on Digital Electronics - Part 2</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[数字电子技术]笔记_Part3.pdf"
+                          >Study Notes on Digital Electronics - Part 3</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[数字电子技术]笔记_Part4.pdf"
+                          >Study Notes on Digital Electronics - Part 4</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/[数字电子技术]笔记_Part5.pdf"
+                          >Study Notes on Digital Electronics - Part 5</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
+                          >Study Note on Advanced Quantum Mechanics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
                   <ul>
                     <li>
-                      Electrodynamics [<a
-                        href="docs/notes/[电动力学]期末偷分宝典.pdf"
-                        >Review</a
-                      >]
-                    </li>
-
-                    <li>
-                      Advanced Quantum Mechanics [<a
-                        href="docs/notes/[高等量子力学]课堂笔记.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                    <li>
-                      Thermodynamics and Statistical Physics [<a
+                      Thermodynamics and Statistical Physics (Spring 2021) [<a
                         href="docs/notes/note-on-statistical-physics.pdf"
                         >Note</a
                       >]
                     </li>
                     <li>
-                      Quantum Optics [<a
+                      Solid State Physics (Spring 2021) [<a
+                        href="docs/notes/[固体物理]期末复习笔记.pdf"
+                        >Review</a
+                      >]
+                    </li>
+                    <li>
+                      Quantum Optics (Fall 2021) [<a
                         href="docs/notes/[量子光学]学习笔记.pdf"
                         >Note</a
                       >] [<a href="docs/notes/[量子光学]复习笔记.pdf">Review</a
                       >]
                     </li>
                     <li>
-                      Solid State Physics [<a
-                        href="docs/notes/[固体物理]期末复习笔记.pdf"
-                        >Review</a
-                      >]
-                    </li>
-                    <li>
-                      Introduction to Plasma Physics [<a
+                      Introduction to Plasma Physics (Fall 2021) [<a
                         href="docs/notes/[等离子体导论]课堂笔记.pdf"
                         >Review</a
                       >]
                     </li>
-
-                    <li>
-                      Digital Electronics [<a
-                        href="docs/notes/[数字电子技术]笔记_Part1.pdf"
-                        >Note 1</a
-                      >] [<a href="docs/notes/[数字电子技术]笔记_Part2.pdf"
-                        >Note 2</a
-                      >] [<a href="docs/notes/[数字电子技术]笔记_Part3.pdf"
-                        >Note 3</a
-                      >] [<a href="docs/notes/[数字电子技术]笔记_Part4.pdf"
-                        >Note 4</a
-                      >] [<a href="docs/notes/[数字电子技术]笔记_Part5.pdf"
-                        >Note 5</a
-                      >]
-                    </li>
                   </ul>
                 </section>
+                <hr />
                 <section id="pku">
                   <header>
                     <h3>
