--- a/notes.html
+++ b/notes.html
@@ -75,21 +75,18 @@
                 <p>Find the notes from:</p>
                 <h4>
                   <a href="#imperial" class="scrolly"
-                    >Imperial College London (2023 - 2024)</a
+                    >Imperial College London</a
                   >
                 </h4>
                 <p></p>
                 <h4>
                   <a href="#hust" class="scrolly"
-                    >Huazhong University of Science and Technology (2018 -
-                    2022)</a
+                    >Huazhong University of Science and Technology</a
                   >
                 </h4>
                 <p></p>
                 <h4>
-                  <a href="#pku" class="scrolly"
-                    >Peking University (Summer 2020)</a
-                  >
+                  <a href="#pku" class="scrolly">Peking University</a>
                 </h4>
               </section>
             </div>
@@ -107,7 +104,7 @@
                   <header>
                     <h3>
                       <a href="#imperial" class="scrolly"
-                        >Imperial College London (2023-2024)</a
+                        >Imperial College London</a
                       >
                     </h3>
                   </header>
@@ -116,52 +113,96 @@
                     physics-related courses I've taken at Imperial College
                     London.
                   </p>
-                  <ul>
-                    <li>
-                      Quantum Information [<a
-                        href="docs/notes/notes-on-quantum-information.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                    <li>
-                      Mathematical Methods for Physicists [<a
-                        href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
-                        >Note</a
-                      >] [<a href="docs/notes/revision-for-2024-mmp-exam.pdf"
-                        >Review</a
-                      >]
-                    </li>
-                    <li>
-                      Advanced Classical Mechanics [<a
-                        href="docs/notes/notes-on-advanced-classical-physics.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                    <li>
-                      Quantum Optics [<a
-                        href="docs/notes/notes-on-quantum-optics.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                    <li>
-                      Quantum Theory of Matter [<a
-                        href="docs/notes/notes-on-quantum-theory-of-matter.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                    <li>
-                      Laser Device Technology [<a
-                        href="docs/notes/notes-on-laser-device-technology.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                    <li>
-                      Nonlinear Optics [<a
-                        href="docs/notes/notes-on-nonlinear-optics.pdf"
-                        >Note</a
-                      >]
-                    </li>
-                  </ul>
+                  <section>
+                    <h4>Quantum Information (Fall 2023)</h4>
+                    <p>
+                      This course was taught by Prof. Myungshik Kim. My notes
+                      were based on his lecture notes and the textbook by
+                      Nielsen and Chuang.
+                    </p>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/notes-on-quantum-information.pdf"
+                          >Study Notes on Quantum Information</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Quantum Optics (Fall 2023)</h4>
+                    <ul>
+                      <li>
+                        <a href="docs/notes/notes-on-quantum-optics.pdf"
+                          >Study Notes on Quantum Optics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
+                    <ul>
+                      <li>
+                        <a
+                          href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
+                          >Study Notes on Mathematical Methods for Physicists</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/revision-for-2024-mmp-exam.pdf"
+                          >Review Notes on Mathematical Methods for
+                          Physicists</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Advanced Classical Mechanics (Fall 2023)</h4>
+                    <ul>
+                      <li>
+                        [<a
+                          href="docs/notes/notes-on-advanced-classical-physics.pdf"
+                          >Study Note on Advanced Classical Mechanics</a
+                        >]
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Quantum Theory of Matter (Spring 2024)</h4>
+                    <ul>
+                      <li>
+                        <a
+                          href="docs/notes/notes-on-quantum-theory-of-matter.pdf"
+                          >Study Notes on Quantum Theory of Matter</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h4>Laser Technology (Spring 2024)</h4>
+                    <p>
+                      This course covers two main topics:
+                      <strong>Laser Device Technology</strong> and
+                      <strong>Nonlinear Optics</strong>. I am not particularly
+                      interested in the first topic, as it focuses primarily on
+                      conceptual understanding and requires memorizing numerous
+                      concepts for exams, rather than employing rigorous
+                      mathematical derivations to prove or explore the
+                      principles in depth.
+                    </p>
+                    <ul>
+                      <li>
+                        <a
+                          href="docs/notes/notes-on-laser-device-technology.pdf"
+                          >Study Note on Laser Device Technology</a
+                        >
+                      </li>
+                      <li>
+                        <a href="docs/notes/notes-on-nonlinear-optics.pdf"
+                          >Study Notes on Nonlinear Optics</a
+                        >
+                      </li>
+                    </ul>
+                  </section>
                 </section>
                 <hr />
                 <section id="hust">
@@ -414,15 +455,13 @@
                 <section id="pku">
                   <header>
                     <h3>
-                      <a href="#pku" class="scrolly"
-                        >Peking University (Summer 2020)</a
-                      >
+                      <a href="#pku" class="scrolly">Peking University</a>
                     </h3>
                   </header>
 
-                  <h4>Quantum Mechanics (II)</h4>
+                  <h4>Quantum Mechanics II (Summer 2020)</h4>
                   <p>
-                    These are my lecture notes from the Quantum Mechanics (II)
+                    These are my lecture notes from the Quantum Mechanics II
                     course taught by Prof. Zhixin Qian during the 2020 Summer
                     School at Peking University.
                   </p>
